--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,8 @@ enforce_ssl: https://brian-h-wang.github.io/new-brian-h-wang.github.io/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+#baseurl: "/reverie"
+baseurl: "/new-brian-h-wang.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
