--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Brian H. Wang Robotics
+name: Brian H. Wang
 
 # Name of the author
 author: Brian Wang
 
 # Short bio or description (displayed in the header)
-description: Personal website of Brian Wang
+description: Robotics PhD Candidate at Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -24,14 +24,14 @@ footer-links:
   email: bhw45@cornell.edu
   facebook:
   flickr:
-  github:
+  github: brian-h-wang
   instagram:
-  linkedin: 
+  linkedin: brian-h-wang
   pinterest:
   rss:
   twitter:
   stackoverflow: 
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UC6-xa50pMUIA2ZTko57Btrw # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
