--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Brian Wang
 description: Robotics PhD Candidate at Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/brian.jpg
 
 #
 # Flags below are optional
