--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Brian H. Wang
 author: Brian Wang
 
 # Short bio or description (displayed in the header)
-description: Robotics PhD Candidate at Cornell University
+description: Robotics researcher
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/brian.jpg
